NEWS 
====

Versioning
----------

Releases will be numbered with the following semantic versioning format:

<major>.<minor>.<patch>

And constructed with the following guidelines:

* Breaking backward compatibility bumps the major (and resets the minor 
  and patch)
* New additions without breaking backward compatibility bumps the minor 
  (and resets the patch)
* Bug fixes and misc changes bumps the patch



qdapDictionaries 0.0.3
----------------------------------------------------------------




qdapDictionaries 0.0.2
----------------------------------------------------------------

First version sent to CRAN

qdapDictionaries 0.0.1
----------------------------------------------------------------

The dictionaries and word lists previously found in qdap have been moved to a separate package, qdapDictionaries.  This is the first installment of the package.